fixed filter spacing, search font size.

--- a/src/css/Search.css
+++ b/src/css/Search.css
@@ -10,6 +10,7 @@
   width: 40%;
   border-radius: 5px;
   border: none;
+  font-size: 16px;
 }
 
 /* Extra small devices (phones, 600px and down) */
